@@ -42,6 +42,12 @@
       <artifactId>spring-boot-starter-logging</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-webclient</artifactId>
+      <version>4.0.0</version>
+    </dependency>
+
 <!--    may or  may not need/use these-->
     <!-- OTel SDK -->
     <dependency>
@@ -73,6 +79,11 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <compilerArgs>
+            <arg>--enable-preview</arg>
+          </compilerArgs>
+        </configuration>
       </plugin>
     </plugins>
   </build>
